--- a/docker/pinger/Dockerfile
+++ b/docker/pinger/Dockerfile
@@ -10,16 +10,12 @@ COPY ../../src/pinger ./
 
 RUN CGO_ENABLED=0 GOOS=linux go build -o /pinger
 
-FROM debian:11-slim AS build-release-stage
+FROM gcr.io/distroless/base-debian11 AS build-release-stage
 
 WORKDIR /
-
-RUN apt-get update && apt-get install -y libcap2-bin && rm -rf /var/lib/apt/lists/*
 
 COPY --from=build-stage /pinger /pinger
 
 COPY ../../config/pinger_config.json /cfg.json
-
-RUN setcap cap_sys_admin+ep /pinger
 
 ENTRYPOINT ["/pinger"]
